feat: remove impersonation from template (faza 3.1)
